--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/draft-js": "^0.11.9",
+    "@types/react-draft-wysiwyg": "^1.13.4",
+    "draft-js": "^0.11.7",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.14.7"
   },
   "devDependencies": {
     "@types/node": "17.0.44",
