--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/draft-convert": "^2.1.4",
     "@types/draft-js": "^0.11.9",
     "@types/react-draft-wysiwyg": "^1.13.4",
+    "draft-convert": "^2.1.12",
     "draft-js": "^0.11.7",
     "next": "12.1.6",
     "react": "18.2.0",
